# mcp-telegram

./: Dockerfile  README.md  pyproject.toml  smithery.yaml
src/mcp_telegram/: cli.py  server.py  telegram.py  types.py  utils.py
